Header appears correctly on mobile

--- a/frontend/mix-to-playlist/src/components/Header.css
+++ b/frontend/mix-to-playlist/src/components/Header.css
@@ -45,11 +45,9 @@
         width: 25px;
         height: 25px;
     }
-    .Header button {
-        height: 25px;
-    }
     .Header p {
         font-size: 18px;
+        margin-left: 10px;
     }
     .Header a {
         font-size: 16px;
@@ -58,3 +56,24 @@
         margin-right: 15px;
     }
   }
+
+  @media only screen and (max-width: 400px) {
+    .Header {
+        height: 25px;
+    }
+    .Header img {
+        width: 15px;
+        height: 15px;
+    }
+    .Header p {
+        font-size: 13px;
+        margin-left: 5px;
+    }
+    .Header a {
+        font-size: 11px;
+        margin: 0px 5px;
+    }
+    .HeaderTabs {
+        margin-right: 10px;
+    }
+}
